@@ -3,25 +3,24 @@ package Managers;
 import Exceptions.UndefinedPropertyType;
 import Exceptions.UndefinedUserType;
 import Properties.*;
-import Interactors.PropertyListingGateway;
 import Review.Review;
 import Users.Owner;
 import Users.Realtor;
 import Users.User;
 import org.json.JSONObject;
 import org.json.JSONArray;
-
-import java.io.*;
+import java.io.File;
+import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Objects;
+import java.io.PrintWriter;
 
-public class PropertyManager implements PropertyListingGateway {
+public class PropertyManager {
     public static Property getProperty(String ID) throws UndefinedPropertyType {
         try {
-            String location = "/Users/zeinsulayman/IdeaProjects/course-project-group-103/src/main/Databases/PropertyListing.json";
+            String location = "src/main/Databases/PropertyListing.json";
             File file = new File(location);
             String content = new String(Files.readAllBytes(Paths.get(file.toURI())));
             JSONObject property_listing = new JSONObject(content);
@@ -63,7 +62,7 @@ public class PropertyManager implements PropertyListingGateway {
     }
 
     public static User getUser(String ID) throws IOException, UndefinedUserType {
-        String location = "/Users/zeinsulayman/IdeaProjects/course-project-group-103/src/main/Databases/UserListing.json";
+        String location = "src/main/Databases/UserListing.json";
         File file = new File(location);
         String content = new String(Files.readAllBytes(Paths.get(file.toURI())));
         JSONObject user_listing = new JSONObject(content);
@@ -71,35 +70,59 @@ public class PropertyManager implements PropertyListingGateway {
         String name = user.getString("name");
         String password = user.getString("password");
         String contact = user.getString("contact");
+        
+        String securityQuestion = user.getString("securityQuestion");
+        String securityAnswer = user.getString("securityAnswer");
+        
         JSONArray reviews = user.getJSONArray("reviews");
         ArrayList<Review> review_list = new ArrayList<>();
         for (int i = 0; i < reviews.length(); i++) {
             review_list.add(getReview(reviews.getString(i)));
         }
+
         if (Objects.equals(user.get("user_type").toString(), "Owner")) {
+            reviews = user.getJSONArray("reviews");
+            review_list = new ArrayList<>();
+            for (int i = 0; i < reviews.length(); i++) {
+                review_list.add(getReview(reviews.getString(i)));
+            }
             if (Objects.equals(user.get("hiredRealtor"), null)) {
-                return new Owner(ID, name, password, contact, review_list);
+                return new Owner(ID, name, password, contact, securityQuestion, securityAnswer, review_list);
             }
             else {
                 String hiredRealtorID = user.getString("hiredRealtor");
-                return new Owner(ID, name, password, contact, hiredRealtorID, review_list);
+                return new Owner(ID, name, password, contact, securityQuestion, securityAnswer, hiredRealtorID, review_list);
+                // might be redundant code, I just removed the conflicts
+                //Owner owner = new Owner(ID, name, password, contact, securityQuestion, securityAnswer);
+                //owner.setReviews(review_list);
+                //return owner;
+
             }
+            //
+            /* else {
+                String hiredRealtorID = user.getString("hiredRealtor");
+                Owner owner = new Owner(ID, name, password, contact, hiredRealtorID,securityQuestion, securityAnswer);
+                owner.setReviews(review_list);
+                return owner;
+            } */
         }
         else if (Objects.equals(user.get("user_type").toString(), "User")) {
             if (Objects.equals(user.get("hiredRealtor"), null)) {
-                return new User(ID, name, password, contact);
+                return new User(ID, name, password, contact, securityQuestion, securityAnswer);
             }
             else {
                 String hiredRealtorID = user.getString("hiredRealtor");
-                return new User(ID, name, password, contact, hiredRealtorID);
+                return new User(ID, name, password, contact, hiredRealtorID, securityQuestion, securityAnswer);
             }
         }
         else if (Objects.equals(user.get("user_type").toString(), "Realtor")) {
-            return new Realtor(ID, name, password, contact);
+                return new Realtor(ID, name, password, contact, securityQuestion, securityAnswer);
+
         }
         else {
             throw new UndefinedUserType((user.getString("user_type") + " is not implemented as a user type yet."));
         }
+
     }
 
     public static Review getReview(String ID) throws IOException {
@@ -116,51 +139,61 @@ public class PropertyManager implements PropertyListingGateway {
         return new Review(ID, reviewString, ownerID, userID, date, rating);
     }
 
-    /**
-     * Implements the save method of the PropertyListingGateway for dependency inversion. This is a temporary
-     * implementation just so that bidding can work it is probably not a good way of doing this.
-     *
-     * @param p: Property object to add to PropertyListing.json.
-     */
-    public void save(Property p) {
+
+    public static float getPrice(String id) {
         try {
-            //
-            JSONObject prop = new JSONObject();
-            prop.put("property_type", p.getType());
-            prop.put("name", p.getName());
-            prop.put("address", p.getAddress());
-            prop.put("owner", p.getOwner().getID());
-            prop.put("sqFt", p.getSqFt());
-            prop.put("price", p.getPrice());
-            prop.put("bids", p.getBids());
-            if (p.getType().equals("Condo")) {
-                prop.put("numBedrooms", ((Condo) p).getNumBedrooms());
-                prop.put("numBathrooms", ((Condo) p).getNumBathrooms());
-                prop.put("numKitchens", ((Condo) p).getNumKitchen());
-                prop.put("numLaundry", ((Condo) p).getNumLaundry());
-            }
-            else if (p.getType().equals("House")) {
-                prop.put("numBedrooms", ((House) p).getNumBedrooms());
-                prop.put("numBathrooms", ((House) p).getNumBathrooms());
-                prop.put("numKitchens", ((House) p).getNumKitchen());
-                prop.put("numLaundry", ((House) p).getNumLaundry());
-            }
-            else if (p.getType().equals("Office")) {
-                prop.put("numOfficeRooms", ((Office) p).getNumOfficeRooms());
-                prop.put("numReceptions", ((Office) p).getNumReceptions());
-            }
-            else if (p.getType().equals("Restaurant")) {
-                prop.put("kitchen_specifications", ((Restaurant) p).getKitchenSpecifications());
-            }
-            //
-            Path filePath = Path.of("src/main/Databases/PropertyListing.json");
-            String content = Files.readString(filePath);
-            JSONObject a = new JSONObject(content);
-            a.put(p.getID(), prop);
-            try (Writer writer = new BufferedWriter(new OutputStreamWriter(
-                    new FileOutputStream("src/main/Databases/PropertyListing.json"), "utf-8"))) {
-                writer.write(a.toString());
-            }
-        } catch(Exception e) {}
+            String location = "src/main/Databases/PropertyListing.json";
+            File file = new File(location);
+            String content = new String(Files.readAllBytes(Paths.get(file.toURI())));
+            JSONObject obj = new JSONObject(content);
+            float price = obj.getJSONObject(id).getFloat("price");
+            return price;
+
+
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+    public static String getPropertyType(String id) {
+        try {
+            String location = "src/main/Databases/PropertyListing.json";
+            File file = new File(location);
+            String content = new String(Files.readAllBytes(Paths.get(file.toURI())));
+            JSONObject obj = new JSONObject(content);
+            String ptype = obj.getJSONObject(id).getString("property_type");
+            return ptype;
+
+
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+    public static boolean getSold(String id) {
+        try {
+            String location = "src/main/Databases/PropertyListing.json";
+            File file = new File(location);
+            String content = new String(Files.readAllBytes(Paths.get(file.toURI())));
+            JSONObject obj = new JSONObject(content);
+            String name = obj.getJSONObject(id).getString("sold");
+            return name.equals("true");
+
+
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+    public static void markSold(String id) throws IOException {
+        String location = "src/main/Databases/PropertyListing.json";
+        File file = new File(location);
+        String content = new String(Files.readAllBytes(Paths.get(file.toURI())));
+        JSONObject obj = new JSONObject(content);
+        obj.getJSONObject(id).put("sold", "true");
+        try (PrintWriter file2 = new PrintWriter(location)) {
+            file2.write(obj.toString());
+        }
+        catch (IOException e) {
+            e.printStackTrace();
+        }
+
     }
 }
